made compatible with java 8